--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -119,7 +119,10 @@
                 android:fontFamily="@font/montserra_regular_bold"
                 android:layout_marginBottom="10dp"/>
 
-            <RelativeLayout style="@style/profileDetailsLayout">
+            <RelativeLayout
+                android:id="@+id/layoutName"
+                style="@style/profileDetailsLayout">
+
                 <ImageView
                     android:id="@+id/nameImageView"
                     android:src="@drawable/account_circle"
@@ -136,6 +139,7 @@
                 <TextView
                     android:id="@+id/tvName"
                     android:text="Your name"
+                    android:layout_below="@+id/nameTextView"
                     android:fontFamily="@font/montserra_regular"
                     android:layout_toEndOf="@id/nameImageView"
                     style="@style/profileDetailsMiniText" />
@@ -144,7 +148,9 @@
 
             <View style="@style/proifleDetailsView" />
 
-            <RelativeLayout style="@style/profileDetailsLayout">
+            <RelativeLayout
+                style="@style/profileDetailsLayout">
+
                 <ImageView
                     android:id="@+id/mobileImageView"
                     android:src="@drawable/phone"
@@ -152,6 +158,7 @@
                     style="@style/profileDetailsImage" />
 
                 <TextView
+                    android:id="@+id/mobile"
                     android:text="Mobile"
                     android:fontFamily="@font/montserra_regular_bold"
                     android:layout_toEndOf="@id/mobileImageView"
@@ -160,6 +167,7 @@
                 <TextView
                     android:id="@+id/tvMobile"
                     android:text="Your mobile number"
+                    android:layout_below="@+id/mobile"
                     android:fontFamily="@font/montserra_regular"
                     android:layout_toEndOf="@id/mobileImageView"
                     style="@style/profileDetailsMiniText" />
@@ -168,7 +176,10 @@
 
             <View style="@style/proifleDetailsView" />
 
-            <RelativeLayout style="@style/profileDetailsLayout">
+            <RelativeLayout
+                android:id="@+id/layoutEmail"
+                style="@style/profileDetailsLayout">
+
                 <ImageView
                     android:id="@+id/emailImageView"
                     android:src="@drawable/email"
@@ -176,6 +187,7 @@
                     style="@style/profileDetailsImage" />
 
                 <TextView
+                    android:id="@+id/email"
                     android:text="Email"
                     android:fontFamily="@font/montserra_regular_bold"
                     android:layout_toEndOf="@id/emailImageView"
@@ -184,6 +196,7 @@
                 <TextView
                     android:id="@+id/tvEmail"
                     android:text="Your email"
+                    android:layout_below="@+id/email"
                     android:fontFamily="@font/montserra_regular"
                     android:layout_toEndOf="@id/emailImageView"
                     style="@style/profileDetailsMiniText" />
@@ -192,7 +205,10 @@
 
             <View style="@style/proifleDetailsView" />
 
-            <RelativeLayout style="@style/profileDetailsLayout">
+            <RelativeLayout
+                android:id="@+id/layoutAddress"
+                style="@style/profileDetailsLayout">
+
                 <ImageView
                     android:id="@+id/addressImageView"
                     android:src="@drawable/location"
@@ -218,7 +234,10 @@
 
             <View style="@style/proifleDetailsView" />
 
-            <RelativeLayout style="@style/profileDetailsLayout">
+            <RelativeLayout
+                android:id="@+id/layoutDOB"
+                style="@style/profileDetailsLayout">
+
                 <ImageView
                     android:id="@+id/dobImageView"
                     android:src="@drawable/dob"
@@ -226,6 +245,7 @@
                     style="@style/profileDetailsImage" />
 
                 <TextView
+                    android:id="@+id/dob"
                     android:text="D.O.B"
                     android:fontFamily="@font/montserra_regular_bold"
                     android:layout_toEndOf="@id/dobImageView"
@@ -234,8 +254,46 @@
                 <TextView
                     android:id="@+id/tvDateOfBirth"
                     android:text="Your DOB"
+                    android:layout_below="@+id/dob"
                     android:fontFamily="@font/montserra_regular"
                     android:layout_toEndOf="@id/dobImageView"
+                    style="@style/profileDetailsMiniText" />
+
+            </RelativeLayout>
+
+            <View style="@style/proifleDetailsView" />
+
+            <RelativeLayout
+                android:id="@+id/layoutAccountNumber"
+                style="@style/profileDetailsLayout">
+
+                <ImageView
+                    android:id="@+id/accountNumberPic"
+                    style="@style/profileDetailsImage"
+                    android:background="@color/myColorThird"
+                    android:src="@drawable/account_number" />
+
+                <TextView
+                    android:id="@+id/accountDetails"
+                    android:text="Account Details"
+                    android:fontFamily="@font/montserra_regular_bold"
+                    android:layout_toEndOf="@id/accountNumberPic"
+                    style="@style/profileDetailsTextMain" />
+
+                <TextView
+                    android:id="@+id/tvAccountName"
+                    android:text="Your Bank"
+                    android:layout_below="@+id/accountDetails"
+                    android:fontFamily="@font/montserra_regular"
+                    android:layout_toEndOf="@id/accountNumberPic"
+                    style="@style/profileDetailsMiniText" />
+
+                <TextView
+                    android:id="@+id/tvAccountNumber"
+                    android:text="Your Bank Account Number"
+                    android:layout_below="@+id/tvAccountName"
+                    android:fontFamily="@font/montserra_regular"
+                    android:layout_toEndOf="@id/accountNumberPic"
                     style="@style/profileDetailsMiniText" />
 
             </RelativeLayout>
