--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -76,7 +76,7 @@
     <style name="profileDetailsImage">
         <item name="android:layout_width">40dp</item>
         <item name="android:layout_height">40dp</item>
-        <item name="android:layout_alignParentTop">true</item>
+        <item name="android:layout_centerVertical">true</item>
         <item name="android:layout_alignParentLeft">true</item>
     </style>
 
@@ -88,7 +88,7 @@
     </style>
 
     <style name="profileDetailsMiniText" parent="viewParent">
-        <item name="android:layout_alignParentBottom">true</item>
+        <item name="android:layout_alignParentBottom">false</item>
         <item name="android:textColor">@color/blackTextColor</item>
         <item name="android:textSize">14sp</item>
         <item name="android:layout_marginLeft">10dp</item>
