--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,14 +1,14 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Kitchen" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.Kitchen" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/myColorSecond</item>
+        <item name="colorPrimary">@color/myColor</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/Shehri_ka_bataya_huwa_color</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/myColorSecond</item>
+        <item name="colorSecondary">@color/myColor</item>
         <item name="colorSecondaryVariant">@color/myColor</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorOnSecondary">@color/white</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">@color/myColor</item>
 
@@ -18,6 +18,10 @@
 
     <style name="DrawerArrowStyle" parent="Widget.AppCompat.DrawerArrowToggle">
         <item name="color">@android:color/white</item>
+    </style>
+
+    <style name="MaterialThemeDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="colorAccent">@color/myColor</item>
     </style>
 
     <style name="NoActionBar">
@@ -72,7 +76,7 @@
     <style name="profileDetailsImage">
         <item name="android:layout_width">40dp</item>
         <item name="android:layout_height">40dp</item>
-        <item name="android:layout_alignParentTop">true</item>
+        <item name="android:layout_centerVertical">true</item>
         <item name="android:layout_alignParentLeft">true</item>
     </style>
 
@@ -84,7 +88,7 @@
     </style>
 
     <style name="profileDetailsMiniText" parent="viewParent">
-        <item name="android:layout_alignParentBottom">true</item>
+        <item name="android:layout_alignParentBottom">false</item>
         <item name="android:textColor">@color/blackTextColor</item>
         <item name="android:textSize">14sp</item>
         <item name="android:layout_marginLeft">10dp</item>
