--- a/app/src/main/res/menu/add_item.xml
+++ b/app/src/main/res/menu/add_item.xml
@@ -5,7 +5,7 @@
     <item
         android:id="@+id/addItem"
         android:title="Add Item"
-        android:icon="@drawable/chef"
+        android:icon="@drawable/add_item"
         app:showAsAction="always"/>
 
 </menu>
