--- a/app/src/main/res/layout/fragment_in_progress.xml
+++ b/app/src/main/res/layout/fragment_in_progress.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".Fragments.InProgress">
 
-    <jp.co.recruit_lifestyle.android.widget.WaveSwipeRefreshLayout
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:id="@+id/layoutInProgress"
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -23,7 +23,7 @@
                 android:layout_height="match_parent"
                 android:background="@color/activity_back" />
 
-        </jp.co.recruit_lifestyle.android.widget.WaveSwipeRefreshLayout>
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
